# cicd_fixer_portia_agent

./: .env.example  .gitignore  API_DOCUMENTATION.md  DOCKER_COMMANDS.md  Dockerfile  README.md  Workflow_Endpoints.md  docker-compose.yml  docker-start.sh  pyproject.toml  requirements.txt  setup.py  start.sh  test.py  tree.md
docs/: logs.txt
scripts/: demo.py  init.sql  setup_db.py  test_portia.py
src/cicd_fixer/: main.py
src/cicd_fixer/analytics/: intelligent_generator.py  ml_predictor.py  pattern_analyzer.py
src/cicd_fixer/api/: dependencies.py
src/cicd_fixer/api/routes/: analysis.py  analytics.py  failures.py  fixes.py  health.py  portia.py  webhook.py
src/cicd_fixer/core/: config.py  logging.py
src/cicd_fixer/database/: connection.py  models.py  repositories.py
src/cicd_fixer/models/: requests.py  responses.py
src/cicd_fixer/services/: gemini_agent.py  github_service.py  portia_agent.py
src/cicd_fixer/tools/: registry.py
